<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="MissingTranslation">

    <string name="app_name">DrovikPlayer</string>
    <!-- home -->
    <string name="home">主页</string>
    <string name="home_file">文件</string>
    <string name="home_photo">相册</string>
    <string name="home_video">电影</string>
    <string name="home_music">音乐</string>
    <string name="home_recorder">蓝牙录音</string>

    <string name="home_no_login">未登录，请点击登录</string>
    <string name="exit_tip">再按一次退出程序</string>

    <!-- left menu -->
    <string name="manager_device">设备管理</string>
    <string name="manager_transport">传输管理</string>
    <string name="manager_download">下载文件夹</string>
    <string name="manager_setting">设置</string>






    <!-- video -->
    <string name="video_title">视频</string>
    <string name="video_all_file">所有视频</string>
    <string name="small_problem">出了点小问题,稍后重试</string>
    <string name="can_not_play">不能播放此视频</string>
    <string name="not_support">播放器不支持此设备</string>
    <string name="retry">重试</string>
    <string name="continue_">继续</string>
    <string name="player_not_wifi">您正在使用移动网络播放视频\n可能产生较高流量费用</string>
    <string name="input_sear_file_name">请输入搜索内容</string>
    <string name="no_exist_file">该目录下无文件</string>
    <string name="video_play_network_disconnect">网络断开</string>
    <string name="video_play_network_unavailable">网络不可用</string>


    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <!-- audio -->
    <string name="paly_all">播放全部</string>
    <string name="singer_album">%1$s-%2$s</string>
    <string name="unknow">未知</string>
    <string name="music_count">(共%1$s首)</string>
    <string name="please_select_music_upload">请选择歌曲</string>
    <string name="no_music">无音乐</string>
    <string name="palay_error_tip">播放失败，获取播放信息失败</string>
    <string name="selct_music_count">选择音乐(%s)</string>
    <string name="search">搜索</string>
    <string name="only_wifi_play_tip">非WIFI模式是否继续播放?</string>
    <string name="delete_tip">确认删除？</string>

    <string name="local_file_null">文件不存在</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_sucess">删除成功</string>

    <string name="click_to_skip">点击跳过</string>

    <!-- weather -->
    <string name="weather_status_info">%1$s %2$s | %3$s %4$s级 | 空气 %5$s</string>
    <string name="weather_week">周</string>
    <string name="city_select">选择城市</string>
    <string name="city_hot">热门城市</string>
    <string name="city_located">定位城市</string>
    <string name="city_search">搜索城市</string>
    <string name="city_hint_search_box">输入城市名或拼音</string>
    <string name="city_nothing_found">没有搜索结果~</string>
    <string name="city_locating">正在定位…</string>
    <string name="city_located_failed">定位失败</string>
    <string name="china">中国</string>
    <string name="weather_future_weather">未来天气</string>
    <string name="weather_aqi_guide" translatable="false">空气质量指数(AQI)</string>
    <string name="weather_lifeIndexes">生活指数</string>
    <string name="today">今天</string>

</resources>
