<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/common_10_dp"
    tools:ignore="RtlHardcoded">

    <TextView
        style="@style/city_LetterIndexTextViewStyle"
        android:text="@string/city_located"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_16_dp"
        android:background="#f5f5f5">

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            android:background="?selectableItemBackground">

            <ImageView
                style="@style/core_CommonIconImageSmall"
                android:src="@mipmap/core_location_dark"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_located_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/city_locating"
                android:textSize="16sp"
                android:textColor="#5c5c5c"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/city_LetterIndexTextViewStyle"
        android:layout_marginTop="@dimen/common_16_dp"
        android:text="@string/city_hot"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/city_header_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/common_10_dp"
        android:paddingRight="@dimen/common_36_dp"
        android:paddingBottom="@dimen/common_10_dp"
       />
</LinearLayout>