<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_actionbar_height"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/home_menu"
            android:layout_width="@dimen/common_39_dp"
            android:layout_height="@dimen/common_39_dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/base_actionbar_padding_left" />

        <TextView
            android:id="@+id/home_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLength="12"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/base_title_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_header">

        <RelativeLayout
            android:id="@+id/home_rl_native_spot_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp">
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/home_weather"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:fitsSystemWindows="false"
            android:layout_marginTop="7dp">

            <LinearLayout
                android:id="@+id/container_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weather_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/weather_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/weather_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/weather_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    android:text="@string/weather_status_info"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/home_hours_forecast_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="bottom"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/home_login"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/home_weather"
            android:visibility="gone"
            android:layout_marginTop="7dp">

            <ImageView
                android:id="@+id/home_login_gif_bg"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/home_body_device_gif_bg_h" />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="31dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <TextView
            android:id="@+id/home_device_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:textColor="@color/white"
            android:textSize="@dimen/base_sencond_title_size" />

        <LinearLayout
            android:id="@+id/home_operate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:weightSum="2">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_splite_line_width"
                android:background="@color/splite_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <View
                    android:layout_width="@dimen/base_splite_line_width"
                    android:layout_height="match_parent"
                    android:background="@color/splite_grey" />

                <RelativeLayout
                    android:id="@+id/home_file"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <!-- local file: record, image, video,record  -->
                    <ImageView
                        android:id="@+id/home_file_iv"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/selector_home_file" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_file_iv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/home_file"
                        android:textColor="@color/white"/>
                </RelativeLayout>

                <View
                    android:layout_width="@dimen/base_splite_line_width"
                    android:layout_height="match_parent"
                    android:background="@color/splite_grey" />

                <RelativeLayout
                    android:id="@+id/home_recorder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <!-- bluetooth recorder -->
                    <ImageView
                        android:id="@+id/home_recorder_iv"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/selector_home_recorder" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_recorder_iv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/home_recorder"
                        android:textColor="@color/white"/>
                </RelativeLayout>

                <View
                    android:layout_width="@dimen/base_splite_line_hight"
                    android:layout_height="100dp"
                    android:background="@color/splite_grey" />

                <RelativeLayout
                    android:id="@+id/home_video1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <!-- net video -->
                    <ImageView
                        android:id="@+id/home_video_iv1"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/selector_home_video"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_video_iv1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/home_video"
                        android:textColor="@color/white"/>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_splite_line_width"
                android:visibility="visible"
                android:background="@color/splite_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/common_4_dp"
                android:visibility="visible">

                <View
                    android:layout_width="@dimen/base_splite_line_width"
                    android:layout_height="match_parent"
                    android:background="@color/splite_grey" />

                <RelativeLayout
                    android:id="@+id/home_video"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <!-- net video -->
                    <ImageView
                        android:id="@+id/home_video_iv"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/common_8_dp"
                        android:src="@drawable/selector_home_video"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_video_iv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/home_video"
                        android:textColor="@color/white"/>
                </RelativeLayout>

                <View
                    android:layout_width="@dimen/base_splite_line_hight"
                    android:layout_height="match_parent"
                    android:background="@color/splite_grey" />

                <!-- net music -->
                <RelativeLayout
                    android:id="@+id/home_music"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:id="@+id/home_music_iv"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/common_8_dp"
                        android:src="@drawable/selector_home_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_music_iv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:text="@string/home_news" />
                </RelativeLayout>

                <View
                    android:layout_width="@dimen/base_splite_line_hight"
                    android:layout_height="match_parent"
                    android:background="@color/splite_grey" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_splite_line_width"
                android:background="@color/splite_grey" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>